[package]
name = "syserve"
version = "0.1.0"
authors = ["vrishk <krishnavrishab@gmail.com>"]
description = "Simple server for yew and yew-router apps"
repository = "https://github.com/vrishk/syserve/"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["yew", "yew-router", "actix-web", "server"]
categories = ["web-programming::http-server"]
readme = "./README.md"

[dependencies]
env_logger = "0.8.3"
argparse = "0.2.2"
warp = "0.3.0"
tokio = { version = "1", features = ["full"] }
