[package]
name = "syserve"
version = "0.2.1"
authors = ["vrishk <krishnavrishab@gmail.com>"]
description = "Simple server for yew and yew-router apps"
repository = "https://github.com/vrishk/syserve/"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["yew", "yew-router", "server"]
categories = ["web-programming::http-server"]
readme = "./README.md"

[dependencies]
env_logger = "0.8.3"
argparse = "0.2.2"
threadpool = "1.8.1"
httparse = "1.3.6"
